Done with front end

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "email-validator": "^2.0.4",
     "vue": "^3.0.0",
     "vue-loaders": "^4.1.4",
     "vue-router": "^4.0.8",
